# securefolders

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  api.ts  fileListUtils.test.ts  fileListUtils.ts  index.css  secureBytes.test.ts  secureBytes.ts  suspendDetector.test.ts  suspendDetector.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: acl.rs  capture_protection.rs  commands.rs  crypto.rs  error.rs  launcher.rs  lib.rs  settings.rs  state.rs  totp.rs  vault.rs
src/components/: CreateVaultModal.tsx  FilePreviewModal.tsx  ModalOverlay.test.tsx  ModalOverlay.tsx  RecoveryCodesDisplay.tsx  SettingsPage.tsx  TotpSetupModal.tsx  UnlockScreen.tsx  VaultSettingsModal.tsx  VaultView.tsx
