[package]
name = "app"
version = "0.15.0"
description = "Coffres de fichiers chiffres localement (AES-256-GCM + Argon2id + TOTP)"
authors = ["Xoriax"]
license = "MIT"
repository = "https://github.com/Xoriax/securefolders"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Crypto
aes-gcm = { version = "0.10", features = ["stream"] }
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"

# TOTP / 2FA
totp-rs = { version = "5", features = ["qr", "gen_secret"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
mslnk = "0.1.8"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[dev-dependencies]
tempfile = "3"
